# trader

./: .coveragerc  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  alembic.ini  cli.py  main.py  mkdocs.yml  pyproject.toml  readme.md  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.gitea/workflows/: lint.yaml  pex.yaml  test.yaml
.github/workflows/: build-and-push.yaml  docs.yaml
docs/: README.md  architecture.md  gen_ref_pages.py
docs/navigation/: geometry.md  overview.md
docs/test/: index.md
migrations/: env.py
migrations/versions/: 063c8e87b668_.py  063c8e87b668_migration.py  3b2ee0f4bc99_.py  44e373441189_.py  6b93295149a3_.py  85517e9af294_.py  a61333bd0558_.py  bbc651a2dd08_.py  d0433f0c972e_.py  da1e111fb73b_.py  e4eb9513ef42_.py  f51f68399840_.py  ff2b4fa73b06_.py
notebooks/: agent.ipynb  mine.ipynb  navigation.ipynb  trade.ipynb
trader/: cache.py  cli.py  exceptions.py  fleet.py  main.py  models.py  print.py  queue.py
trader/actions/: logistics.py
trader/client/: agent.py  cargo.py  client.py  contract.py  cooldown.py  extraction.py  faction.py  fuel.py  jump_gate.py  market.py  navigation.py  payload.py  registration.py  request.py  request_cache.py  ship.py  ship_purchase.py  shipyard.py  status.py  system.py  waypoint.py
trader/dao/: agent_histories.py  agent_history.py  dao.py  markets.py  models.py  queues.py  ship_events.py  ships.py  shipyards.py  squads.py  waypoints.py
trader/fleet/: fleet.py
trader/logic/: common.py  leader.py  miner_trader.py  simple_explorer.py  simple_miner.py  simple_miner_trader.py  simple_trader.py
trader/print/: models.py
trader/queue/: action_queue.py  queue.py  request_queue.py
trader/queues/: action_queue.py  base_queue.py  request_queue.py
trader/roles/: common.py  explorer.py  harvester.py  merchant.py  navigator.py
trader/roles/merchant/: finder.py  merchant.py
trader/roles/navigator/: fuel.py  geometry.py  navigator.py
trader/tests/: conftest.py
trader/tests/factories/: client.py
trader/tests/mocks/: common.py
trader/tests/plugins/: alembic.py
trader/tests/trader/: test_main.py
trader/tests/trader/roles/navigator/: test_geometry.py
trader/util/: algebra.py  keys.py  singleton.py
