[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "trader"
version = "0.0.1"
description = "Trader app for use with space-trader api"
dependencies = [
    "alembic==1.*",
    "click==8.*",
    "dataclass_wizard==0.22.*",
    "dill==0.3.*",
    "httpx==0.25.*",
    "loguru==0.7.*",
    "pandas==2.*",
    "rich==13.*",
    "rich_click==1.*",
    "sqlmodel==0.0.*",
    "tsp_solver2==0.4.*"
]

[project.optional-dependencies]
build = [
    "pex==2.*"
]
dev = [
    "black==23.*",
    "ipython==8.*",
    "isort==5.*",
    "pex==2.*",
    "pip-tools==7.*",
    "polyfactory==2.*",
    "pyright==1.*",
    "pytest==7.*",
    "pytest-cov==4.*",
    "pytest-env==1.*",
    "pytest-socket==0.6.*",
    "respx==0.20.*"
]

[project.scripts]
trader = "trader.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
optional-dependencies.dev = { file = ["requirements-dev.txt"] }
optional-dependencies.build = { file = ["requirements-build.txt"] }

[tool.isort]
profile = "black"

[tool.pyright]
ignore = ["~/.asdf", "./migrations"]
include = ["trader"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true

[tool.pytest_env]
DB_URL = "sqlite:///test.db"

[tool.pytest.ini_options]
testpaths = ["trader/tests"]
pythonpath = [
  "."
]
