[metadata]
name = trade
version = 0.0.1
description = Trader app for use with space-trader api
long_description = file: readme.md

[options]
packages = find:
install_requires =
    alembic
    click
    dataclass_wizard
    httpx
    loguru
    rich
    sqlmodel

[options.extras_require]
test =
    black
    isort
    pyright
