[metadata]
name = trader
version = 0.0.1
description = Trader app for use with space-trader api
long_description = file: readme.md

[options]
packages = find:
install_requires =
    alembic
    click
    dataclass_wizard
    httpx
    loguru
    rich
    rich_click
    sqlmodel
    tsp_solver2

[options.extras_require]
test =
    black
    isort
    pex
    pip-tools
    pyright

[options.entry_points]
console_scripts =
    trader = trader.cli:cli
